--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "br.com.loginapp",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "bundler": "metro",
@@ -32,7 +34,17 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      [
+      "expo-build-properties",
+      {
+        "ios": {
+          "userFrameworks": "static"
+        }
+      }
+    ],
+    "@react-native-firebase/app",
+    "@react-native-firebase/auth"
     ],
     "experiments": {
       "typedRoutes": true
